  source_file = [
    'build_config.h',
    'closure.h',
    'compiler_specific.h',
    'concurrent_message_loop.cc',
    'concurrent_message_loop.h',
    'delayed_task.cc',
    'delayed_task.h',
    'log_level.h',
    'log_settings.cc',
    'log_settings.h',
    'log_settings_state.cc',
    'logging.cc',
    'logging.h',
    'make_copyable.h',
    'memory/ref_counted.h',
    'memory/ref_counted_internal.h',
    'memory/ref_ptr.h',
    'memory/ref_ptr_internal.h',
    'memory/task_runner_checker.cc',
    'memory/task_runner_checker.h',
    'memory/thread_checker.h',
    'memory/weak_ptr.h',
    'memory/weak_ptr_internal.cc',
    'memory/weak_ptr_internal.h',
    'message_loop.cc',
    'message_loop.h',
    'message_loop_impl.cc',
    'message_loop_impl.h',
    'message_loop_task_queues.cc',
    'message_loop_task_queues.h',
    'posix_wrappers.h',
    'size.h',
    'synchronization/atomic_object.h',
    'synchronization/count_down_latch.cc',
    'synchronization/count_down_latch.h',
    'synchronization/semaphore.cc',
    'synchronization/semaphore.h',
    'synchronization/shared_mutex.h',
    'synchronization/sync_switch.cc',
    'synchronization/sync_switch.h',
    'synchronization/waitable_event.cc',
    'synchronization/waitable_event.h',
    'task_queue_id.h',
    'task_runner.cc',
    'task_runner.h',
    'task_source.cc',
    'task_source.h',
    'thread.cc',
    'thread.h',
    'thread_local.cc',
    'thread_local.h',
    'time/time_delta.h',
    'time/time_point.cc',
    'time/time_point.h',
    'trace_event.h',
    'unique_fd.cc',
    'unique_fd.h',
    'unique_object.h',
    'wakeable.h',
  ]

source_file += [ 'synchronization/shared_mutex_std.cc' ]

    source_file += [
      'platform/linux/message_loop_linux.cc',
      'platform/linux/message_loop_linux.h',
      'platform/linux/timerfd.cc',
      'platform/linux/timerfd.h',
    ]

flutter_fml_dep = declare_dependency(
                                  include_directories : include_directories('.'),
                                  sources : source_file
                               )
